--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -110,3 +110,11 @@ mybatis:
   mapperLocations: classpath*:mybatis/**/*Mapper.xml
   # 加载全局的配置文件
   configLocation: classpath:mybatis/mybatis-config.xml
+
+# token配置
+token:
+  header: Authorization
+  # 令牌密钥
+  secret: abcdefghijklmnopqrstuvwxyz
+  # 令牌有效期（默认30分钟）
+  expireTime: 30
