--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,10 @@
         <slf4j.version>1.7.26</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <fastjson.version>1.2.75</fastjson.version>
-        <common.beanutils.version>1.9.4</common.beanutils.version>
-        <common.lang3.version>3.7</common.lang3.version>
-        <common.io.version>2.8.0</common.io.version>
+        <jwt.version>0.9.0</jwt.version>
+        <commons.beanutils.version>1.9.4</commons.beanutils.version>
+        <commons.lang3.version>3.7</commons.lang3.version>
+        <commons.io.version>2.8.0</commons.io.version>
     </properties>
 
     <dependencies>
@@ -78,6 +79,17 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+        <!-- spring security 安全认证 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <!--Token生成与解析-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jwt.version}</version>
+        </dependency>
 
         <!--简化编码神器-->
         <dependency>
@@ -114,6 +126,13 @@
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
             <version>2.2.7</version>
+        </dependency>
+
+        <!--io常用工具类 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
         </dependency>
 
 
