--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -34,7 +34,7 @@ spring:
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
-        enabled: false
+        enabled: true
         url: jdbc:mysql://localhost:3306/data_center?useUnicode=true&nullCatalogMeansCurrent=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true&failOverReadOnly=false
         username: root
         password: root
