--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,19 @@
             <version>${commons.io.version}</version>
         </dependency>
 
+        <!--常用工具类 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>commons-beanutils</groupId>-->
+<!--            <artifactId>commons-beanutils</artifactId>-->
+<!--            <version>${commons.beanutils.version}</version>-->
+<!--        </dependency>-->
+
+
 
         <!-- swagger2-->
         <dependency>
