--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 7777
   servlet:
     # 应用的访问路径
     context-path: /
@@ -28,14 +28,14 @@ spring:
       master:
         #192.168.0.177
         #localhost
-        url: jdbc:mysql://localhost:3306/data_center?useUnicode=true&nullCatalogMeansCurrent=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true&failOverReadOnly=false
+        url: jdbc:mysql://localhost:3306/data_center?useUnicode=true&nullCatalogMeansCurrent=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8&allowMultiQueries=true&failOverReadOnly=false
         username: root
         password: root
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
         enabled: true
-        url: jdbc:mysql://localhost:3306/data_center?useUnicode=true&nullCatalogMeansCurrent=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true&failOverReadOnly=false
+        url: jdbc:mysql://localhost:3306/data_center?useUnicode=true&nullCatalogMeansCurrent=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8&allowMultiQueries=true&failOverReadOnly=false
         username: root
         password: root
       # 初始连接数
